--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,12 +8,24 @@
     <title>{{title}}</title>
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
-
   <body>
+    <nav>
+      <ul>
+        <li id="to-left">
+          <p><a href="/"> Users - demo </a></p>
+        </li>
+        <li id="to-right">
+          <a href="/auth/signup">Signup</a><span> | </span>
+          <a href="/auth/login">Login</a>
+          {{!-- <form id="logout-form" action="/auth/logout" method="POST">
+            <button>Logout</button>
+          </form> --}}
+        </li>
+      </ul>
+    </nav>
 
     {{{body}}}
 
     <script src="/js/script.js"></script>
   </body>
-
 </html>
