--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -19,7 +19,7 @@
             <form id="logout-form" action="/auth/logout" method="POST">
               <button>Logout</button>
             </form>
-            <a href="/users/user-profile">Profile</a>
+            <a href="/auth/userProfile">Profile</a>
           </li>
         {{else}}
           <li id="to-right">
